--- a/webroot/css/main.css
+++ b/webroot/css/main.css
@@ -1,3 +1,11 @@
 /*
 This css file is a placeholder. Use this or roll your own, choice is yours.
 */
+body {
+    margin: 20px;
+}
+
+#form-container {
+    margin-left: 25%;
+    margin-right: 25%;
+}
